--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@
 title: The best location to live
 email: your-email@example.com
 description: Find your ideal residence place with our new tool! Set your own parameters and discover the places that suits your tastes.
-baseurl: "https://github.com/the-best-location-to-live" # the subpath of your site, e.g. /blog
-url: "https://github.com/the-best-location-to-live" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "the-best-location-for-you-to-live" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  the-best-location-to-live
 
 # Build settings
